迁移 Trinity 通用自动搭建